# snapmail-dna

./: .gitignore  Cargo.toml  README.md  app.json  bundle.toml  conductor-config-billy.toml  conductor-config-camille.toml  conductor-config.toml  config.nix
.circleci/: config.yml
nix/holochain/: default.nix
spec/: readme.md
test/: config.js  index.js  package.json  utils.js
test/suites/: file.js  (+12 more)
zomes/snapmail/code/: .hcbuild  Cargo.toml
zomes/snapmail/code/src/: entry_kind.rs  globals.rs  lib.rs  link_kind.rs  mail.rs  protocol.rs  signal_protocol.rs  utils.rs
zomes/snapmail/code/src/file/: chunk.rs  manifest.rs  mod.rs
zomes/snapmail/code/src/file/entries/: chunk.rs  manifest.rs
zomes/snapmail/code/src/file/functions/: get_missing_attachments.rs
zomes/snapmail/code/src/handle/: mod.rs  utils.rs  validation.rs
zomes/snapmail/code/src/handle/functions/: find_agent.rs  get_all_handles.rs  get_handle.rs  get_my_handle.rs  get_my_handle_history.rs  mod.rs  ping_agent.rs  set_handle.rs
zomes/snapmail/code/src/mail/: ack.rs  inbox.rs  inmail.rs  mod.rs  outmail.rs  pending_mail.rs  receive.rs  send.rs  utils.rs
zomes/snapmail/code/src/mail/entries/: ackreceipt_encrypted.rs  ackreceipt_private.rs  inack.rs  inmail.rs  mod.rs  outack.rs  outmail.rs  pending_ack.rs  pending_mail.rs
zomes/snapmail/code/src/mail/functions/: acknowledge_mail.rs  check_incoming_ack.rs  check_incoming_mail.rs  get_all_arrived_mail.rs  get_all_mails.rs  get_mail.rs  get_outack.rs  has_ack_been_received.rs  has_been_received.rs  has_mail_been_received.rs  mod.rs  send_mail.rs
(+3 files in other folders)
