[package]
name = "snapmail"
version = "0.2.0"
authors = ["doute.d@gmail.com"]
edition = "2018"

[dependencies]
serde = "=1.0.104"
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
serde_derive = "=1.0.104"
hdk = "=0.0.51-alpha1"
hdk_proc_macros = "=0.0.51-alpha1"
holochain_wasm_utils = "=0.0.51-alpha1"
holochain_json_derive = "0.0"
chrono = "=0.4.6"
multihash = "=0.8.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
